--- a/devel/py-cdg/Makefile
+++ b/devel/py-cdg/Makefile
@@ -4,7 +4,7 @@ PORTNAME=	cdg
 PORTVERSION=	0.1.3
 CATEGORIES=	devel python
 MASTER_SITES=	CHEESESHOP
-#PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	jonathan@FreeBSD.org
 COMMENT=	Library for working with call- and data-flow graphs
